one last css fix to make footer look better on mobile screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -361,5 +361,6 @@ footer {
     .contactBox a {
         padding: 2px;
         margin: 0px;
+        line-height: 200%;
     }
 }
